rust/crates/codec-pandoc/src/snapshots/pandoc_fragments@cite-group.json.snap
---
source: rust/crates/codec-pandoc/src/decode.rs
expression: json
input_file: fixtures/fragments/pandoc/cite-group.json

---
[
  {
    "type": "Paragraph",
    "content": [
      "A group of citations like ",
      {
        "type": "CiteGroup",
        "items": [
          {
            "type": "Cite",
            "target": "vincent",
            "citationMode": "Parenthetical"
          },
          {
            "type": "Cite",
            "target": "van",
            "citationMode": "Parenthetical"
          }
        ]
      },
      " or ",
      {
        "type": "CiteGroup",
        "items": [
          {
            "type": "Cite",
            "target": "vincent",
            "citationMode": "Parenthetical"
          },
          {
            "type": "Cite",
            "target": "van",
            "citationMode": "Parenthetical"
          },
          {
            "type": "Cite",
            "target": "goh",
            "citationMode": "Parenthetical"
          }
        ]
      },
      "."
    ]
  }
]
