rust/crates/codec-pandoc/src/snapshots/pandoc_fragments@code-block.json.snap
---
source: rust/crates/codec-pandoc/src/decode.rs
expression: json
input_file: fixtures/fragments/pandoc/code-block.json

---
[
  {
    "type": "CodeBlock",
    "text": "Some plain text"
  },
  {
    "type": "CodeBlock",
    "text": "# Some Python code\n1 + 1",
    "programmingLanguage": "python"
  },
  {
    "type": "CodeBlock",
    "text": "An indented code block\nin unspecified language."
  }
]
