rust/crates/codec-pandoc/src/snapshots/pandoc_fragments@code-fragment.json.snap
---
source: rust/crates/codec-pandoc/src/decode.rs
expression: json
input_file: fixtures/fragments/pandoc/code-fragment.json

---
[
  {
    "type": "Paragraph",
    "content": [
      "Some ",
      {
        "type": "CodeFragment",
        "text": "code"
      },
      " in a paragraph."
    ]
  }
]
