rust/crates/codec-pandoc/src/snapshots/pandoc_fragments@delete.json.snap
---
source: rust/crates/codec-pandoc/src/decode.rs
expression: json
input_file: fixtures/fragments/pandoc/delete.json

---
[
  {
    "type": "Paragraph",
    "content": [
      "Some ",
      {
        "type": "Delete",
        "content": [
          "deleted"
        ]
      },
      " text."
    ]
  }
]
