rust/crates/codec-pandoc/src/snapshots/pandoc_fragments@emphasis.json.snap
---
source: rust/crates/codec-pandoc/src/decode.rs
expression: json
input_file: fixtures/fragments/pandoc/emphasis.json

---
[
  {
    "type": "Paragraph",
    "content": [
      "Some ",
      {
        "type": "Emphasis",
        "content": [
          "emphasized"
        ]
      },
      " text."
    ]
  },
  {
    "type": "Paragraph",
    "content": [
      "Alternative ",
      {
        "type": "Emphasis",
        "content": [
          "emphasized"
        ]
      },
      " syntax."
    ]
  }
]
