rust/crates/codec-pandoc/src/snapshots/pandoc_fragments@link.json.snap
---
source: rust/crates/codec-pandoc/src/decode.rs
expression: json
input_file: fixtures/fragments/pandoc/link.json

---
[
  {
    "type": "Paragraph",
    "content": [
      "A ",
      {
        "type": "Link",
        "content": [
          "link"
        ],
        "target": "https://stenci.la",
        "title": "Stencila"
      },
      "."
    ]
  },
  {
    "type": "Paragraph",
    "content": [
      "A ",
      {
        "type": "Link",
        "content": [
          "link"
        ],
        "target": ""
      },
      " with no target or title."
    ]
  },
  {
    "type": "Paragraph",
    "content": [
      "A ",
      {
        "type": "Link",
        "content": [
          "link"
        ],
        "target": "https://stenci.la"
      },
      " with no title."
    ]
  }
]
