rust/crates/codec-pandoc/src/snapshots/pandoc_fragments@math-fragment.json.snap
---
source: rust/crates/codec-pandoc/src/decode.rs
expression: json
input_file: fixtures/fragments/pandoc/math-fragment.json

---
[
  {
    "type": "Paragraph",
    "content": [
      "Some math like ",
      {
        "type": "MathFragment",
        "text": "\\pi"
      },
      ", and ",
      {
        "type": "MathFragment",
        "text": "1+1"
      },
      "."
    ]
  },
  {
    "type": "Paragraph",
    "content": [
      "But not $1 and $2."
    ]
  }
]
